<resources>
    <string name="app_name">Dictionary</string>
    <string name="clear">Clear</string>
    <string name="erase">Erase</string>
    <string name="enter_a_word">Enter a word</string>
    <string name="search">Search</string>
    <string name="oline_dict">~~Online Dictionary~~</string>
    <string name="frequently_searched">Frequently searched words</string>
    <string name="add_to_favorite_list">Add to Favorite list</string>
    <string name="my_favorite_words">My favorite words</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="empty_bucket">Empty Bucket</string>
</resources>
